--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/inlineDetails.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/inlineDetails.html
@@ -10,6 +10,6 @@
     {% endfor %}</small></div>
 
     <div class="definition">
-        {{ item.definition|striptags|safe|truncatewords:20 }}
+        {{ item.definition|striptags|truncatewords:20 }}
     </div>
 {% endif %}
