--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataset.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataset.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/concepts/managedContent.html" %}
-{% load i18n aristotle_tags %}
+{% load i18n aristotle_tags util_tags %}
 
 {% block extra_head_scripts %}
 {{ block.super }}
@@ -63,11 +63,11 @@ For more details on how to access this data contact the data custodian listed be
                         {% endif %}
                         
                         <div>
-                            {{ distribution.definition | safe }}
+                            {{ distribution.definition|bleach }}
                         </div>
                         <dl>
-                            <dt style="float:left">Licence</dt><dd>{{ distribution.license | safe }}</dd>
-                            <dt style="float:left">Rights</dt><dd>{{ distribution.rights | safe }}</dd>
+                            <dt style="float:left">Licence</dt><dd>{{ distribution.license }}</dd>
+                            <dt style="float:left">Rights</dt><dd>{{ distribution.rights }}</dd>
                         </dl>
                         {% if distribution.distributiondataelementpath_set.exists %}
                         <strong>Data Elements in this dataset</strong>
