--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/distribution.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/distribution.html
@@ -36,10 +36,10 @@ For more details on how to access this data contact the data custodian listed be
         {% endif %}
     </dd>
     {% if item.license %}
-    <dt style="float:left">Licence</dt> <dd>{{ item.license | safe }}</dd>
+    <dt style="float:left">Licence</dt> <dd>{{ item.license }}</dd>
     {% endif %}
     {% if item.rights %}
-    <dt style="float:left">Rights</dt> <dd>{{ item.rights | safe }}</dd>
+    <dt style="float:left">Rights</dt> <dd>{{ item.rights }}</dd>
     {% endif %}
 
     <div class="well">
