--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/downloads/pdf/helpers/inclusion_row.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/downloads/pdf/helpers/inclusion_row.html
@@ -1,10 +1,11 @@
+{% load util_tags %}
 <tr>
     <td>{{ inc.order }}</td>
     <td>{% include "aristotle_mdr/helpers/itemLink.html" with item=inc.include %}
         <div style="font-size:90%;padding-left:1cm;">
             {% if inc.specific_information %}
             <p class="included_html">
-                {{ inc.specific_information | safe }}
+                {{ inc.specific_information|bleach }}
             </p>
             {% endif %}
             {% if inc.conditional_obligation %}
