--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/browse/dataElements.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/browse/dataElements.html
@@ -1,4 +1,5 @@
 {% extends 'aristotle_mdr/base.html' %}
+{% load util_tags %}
 
 {% block title %}Browsing Data Elements based on {{ dataElementConcept.name }}{% endblock %}
 {% block content %}
@@ -8,7 +9,7 @@
     </h1>
 <strong>About <em>{{ dataElementConcept.name }}</em></strong>
 <div id="definition">
-    {{ dataElementConcept.definition | safe }}
+    {{ dataElementConcept.definition|bleach }}
 </div>
 {% if items %}
 <p>
@@ -22,7 +23,7 @@
             <a href="{% url 'aristotle:item' iid=i.id %}">{{ i.name }}</a>
         </dt>
         <dd>
-            {{ i.definition|truncatewords:20|striptags }}
+            {{ i.definition|striptags|truncatewords:20 }}
         </dd>
     {% endfor %}
     </dl>
