--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/list_details/unit_of_measure.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/list_details/unit_of_measure.html
@@ -1,6 +1,6 @@
 {% load aristotle_tags %}
 <div class="definition">
-    {{ item.definition|striptags|safe|truncatewords:50 }}
+    {{ item.definition|striptags|truncatewords:50 }}
 </div>
 <hr>
     {% if item.item.measure|can_view:request.user  %}
