--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/concept_list_details.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/concept_list_details.html
@@ -1,8 +1,8 @@
 <div class="definition">
-    {{ item.definition|striptags|safe|truncatewords:50 }}
+    {{ item.definition|striptags|truncatewords:50 }}
 </div>
 <div class="small">
-    {{ item.references|striptags|safe|truncatewords:50 }}
+    {{ item.references|striptags|truncatewords:50 }}
 
-    {{ item.comments|striptags|safe|truncatewords:50 }}
+    {{ item.comments|striptags|truncatewords:50 }}
 </div>
