--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_registration_authority_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_registration_authority_list.html
@@ -56,7 +56,7 @@ Showing {{ page.paginator.count }} results.
                 {% endif %}
             </a>
         </td>
-        <td>{{ item.definition|striptags|safe|truncatewords:50 }}</td>
+        <td>{{ item.definition|striptags|truncatewords:50 }}</td>
         <td>{{ item.user_count }}</td>
         {% if show_all %}
         {% endif %}
