--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
@@ -59,7 +59,7 @@ Showing {{ page.paginator.count }} results.
         <td>
             <a href="{{ item.get_absolute_url }}">{{ item.name }}</a>
         </td>
-        <td>{{ item.definition|striptags|safe|truncatewords:50 }}</td>
+        <td>{{ item.definition|striptags|truncatewords:50 }}</td>
         <td>{{ item|distinct_members_count }}</td>
         <td>{{ item.num_items }}</td>
         {% if show_all %}
