--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/static/extensions.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/static/extensions.html
@@ -1,4 +1,5 @@
 {% extends "aristotle_mdr/base.html" %}
+{% load util_tags %}
 
 {% block content %}
 <h1>{% block title %}Aristotle Extensions{% endblock %}</h1>
@@ -19,7 +20,7 @@
                     {{ ext.verbose_name }}
                 {% endif %}
             </dt>
-            <dd>{{ ext.description | safe }}</dd>
+            <dd>{{ ext.description|bleach }}</dd>
         {% endfor %}
         </dl>
     {% endif %}
@@ -35,11 +36,11 @@
                 {{ ext.label }}
             {% endif %}
         </strong>
-        <p>{{ ext.description | safe}}</p>
+        <p>{{ ext.description|bleach }}</p>
         <dl>
         {% for d in ext.downloads %}
             <dt><i class="fa {{d.2}}"></i> {{ d.1 }}</dt>
-            <dd>{{ d.4 | safe}}</dd>
+            <dd>{{ d.4|bleach }}</dd>
         {% endfor %}
         </dl>
         {% endfor %}
