--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/workgroup.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/workgroup.html
@@ -1,6 +1,6 @@
 {% extends "aristotle_mdr/user/userHome.html" %}
 
-{% load humanize i18n %}
+{% load humanize i18n util_tags %}
 
 {% block collapse-link%}
     <i class="fa fa-users fa-fw"></i> {{ workgroup.name }}</a>
@@ -72,7 +72,7 @@
 
 <div class="col-sm-8">
     <div>
-        {{ workgroup.definition | safe }}
+        {{ workgroup.definition|bleach }}
     </div>
     <h2>Details</h2>
     <dl>
