--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_change_form.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/registration/password_change_form.html
@@ -28,7 +28,7 @@
     {{ form.new_password1.errors }}
     {{ form.new_password1.label_tag }} {{ form.new_password1 }}
     {% if form.new_password1.help_text %}
-    {{ form.new_password1.help_text|safe }}
+    {{ form.new_password1.help_text }}
     {% endif %}
 </div>
 
@@ -36,7 +36,7 @@
 {{ form.new_password2.errors }}
     {{ form.new_password2.label_tag }} {{ form.new_password2 }}
     {% if form.new_password2.help_text %}
-    {{ form.new_password2.help_text|safe }}
+    {{ form.new_password2.help_text }}
     {% endif %}
 </div>
 
