--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -39,7 +39,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="modal-title h4">Share Link</div>
       </div>
-      <form method="POST">
+      <form class="ajaxform" method="POST">
         <div class="modal-body">
           {% if share %}
             <p>
