Striptags on defn for now

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContentVersion.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContentVersion.html
@@ -21,7 +21,7 @@
 
     <h2>{% trans 'Definition'%}</h2>
     <div id="definition" class="definition">
-        {{ item.definition|safe}}
+        {{ item.definition|striptags }}
     </div>
 
     {% for heading, fields in item.item_data.items %}
