Strip tags on rich text fields for now

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContentVersion.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContentVersion.html
@@ -40,7 +40,11 @@
         {% if value.is_link %}
           <p><a href="{% url 'aristotle:item' value.linkid %}">{{ value.object.name }}</a></p>
         {% else %}
-          <p>{{ value.value|default:"None" }}</p>
+          {% if value.is_html %}
+            <p>{{ value.value|striptags|default:"None" }}</p>
+          {% else %}
+            <p>{{ value.value|default:"None" }}</p>
+          {% endif %}
         {% endif %}
       {% endfor %}
     {% endfor %}
