--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/creating_download.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/creating_download.html
@@ -81,7 +81,7 @@
         function readyDownload(file_details) {
             downloadReady = true;
             let downloadIcon = $('<i></i>').addClass('fa fa-download');
-            let downloadLink = $('<a></a>').text('You document is ready to download. Click here.');
+            let downloadLink = $('<a></a>').text(' You document is ready to download. Click here.');
             let downloadText = $('<div></div>').text('Your download will expire in ' + file_details.ttl + ' minutes.');
             downloadLink.attr({
                 'id': 'document-link',
@@ -90,7 +90,7 @@
                 'target': '_blank'
             });
             $('#download-link-wrapper>p').html(downloadText);
-            $('#download-link-wrapper>p').append(downloadIcon);
+            downloadLink.prepend(downloadIcon);
             $('#download-link-wrapper>p').append(downloadLink);
             console.log('is this a download ready situation?');
             initDownload();
