--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/versionInfobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/versionInfobox.html
@@ -4,8 +4,8 @@
 {% block infobox_list %}
     <dt>{% trans 'Type' context "Object Type" %}</dt>
     <dd>{{ item.get_verbose_name }}</dd>
-    <dt>Identifiers</dt>
-    <dd>UUID - <span title='{{ item.uuid }}'>{{ item.uuid }}</span></dd>
+    <dt>UUID</dt>
+    <dd><span title='{{ item.uuid }}'>{{ item.uuid }}</span></dd>
     <dt>{% trans 'Version Created' %}</dt>
     <dd>{{ revision.date_created|date:'o-m-d H:i e' }}</dd>
     <dt>{% trans 'Item Created' %}</dt>
