--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/versionInfobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/versionInfobox.html
@@ -20,7 +20,7 @@
       {% endif %}
     </dd>
     <hr>
-      <dt>{% trans 'Current Item' %}</dt>
+      <dt>{% trans 'Current Version' %}</dt>
       <dd><a href="{% url 'aristotle:item' current_item.id %}">{{ current_item.name }}</a></dd>
       <dt>{% trans 'Registration' %}</dt>
       <dd><a href="{% url 'aristotle:registrationHistory' item.id %}">{% trans 'View registration history'%}</a></dd>
