--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/validate.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/validate.html
@@ -5,13 +5,16 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Validate</h1>
-  <p>
-    Schema {{ valid|yesno:"Valid,Invalid" }}
-  </p>
-  {% for result in results %}
-  <p>
-    {{ result.check }}: <i class="fa fa-{{ result.status|yesno:"check,times" }} text-{{ result.status|yesno:"success,danger" }}"></i>
-  </p>
-  {% endfor %}
+  <h1>{{ item_name }} Validation</h1>
+  {% if not setup_valid %}
+    <p>
+      No Validation rules avaliable
+    </p>
+  {% else %}
+    {% for result in results %}
+    <p>
+      {{ result.check }}: <i class="fa fa-{{ result.status|yesno:"check,times" }} text-{{ result.status|yesno:"success,danger" }}"></i>
+    </p>
+    {% endfor %}
+  {% endif %}
 {% endblock %}
