--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/creating_download.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/creating_download.html
@@ -26,7 +26,7 @@
                 <div class="row">
                     <div class="col-md-12" id="download-link-wrapper">
                         <p>
-                        <i class="fa fa-spinner spinning"></i> Please wait while we are preparing your download
+                        <i class="fa fa-spinner fa-pulse"></i> Please wait while we are preparing your download
                         </p>
                     </div>
                 </div>
