--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -26,106 +26,132 @@
     {% endif %}
     ({{ item.get_verbose_name }})
 {% endblock %}
+
 {% block content %}
 <div id="vue-container">
-<header class="row">
-    {% if breadcrumbs %}
-      <ol class="breadcrumb">
-        {% for crumb in breadcrumbs %}
-          <li {% if crumb.active %}class="active"{% endif %}>
-            {% if crumb.url %}
-              <a href="{{ crumb.url }}">{{ crumb.name }}</a>
-            {% else %}
-              {{ crumb.name }}
-            {% endif %}
-          </li>
-        {% endfor %}
-      </ol>
-    {% endif %}
-    {% block concept_title %}
-    {% include "aristotle_mdr/concepts/titles/display_title.html" %}
-    {% endblock %}
-    {% if not hide_item_actions %}
-      {% include "aristotle_mdr/concepts/actionbar.html" %}
-    {% endif %}
-</header>
-<section class="managed row">
-      {% include "aristotle_mdr/concepts/infobox.html" %}
-      <div v-pre>
-        {# Pre rendered content #}
-        {% include "aristotle_mdr/concepts/visibilityInfoBar.html" %}
-
-        <h2 title="{% doc item 'definition' %}">{% trans 'Definition'%}</h2>
-        <div id="definition" class="definition">
-            {{ item.definition | safe}}
-        </div>
-
-        {% block objSpecific %}{% endblock %}
-
-        {% if item.comments %}
-            <h2>Comments</h2>
-            {{ item.comments | safe }}
-        {% endif %}
-
-        {% if item.references %}
-        <div>
-        <h2>References</h2>
-            <p>{{ item.references | safe }}</p>
-            {% if item.submitting_organisation %}
-            <h3>Submitting Organisation</h3>
-                <p>{{ item.submitting_organisation }}</p>
-            {% endif %}
-            {% if item.responsible_organisation %}
-            <h3>Responsible Organisation</h3>
-                <p>{{ item.responsible_organisation }}</p>
-            {% endif %}
-        </div>
-        {% endif %}
-        {% if 'aristotle_mdr.contrib.slots'|is_active_module %}
-            {% include "aristotle_mdr/slots/slots_display.html" %}
-        {% endif %}
-        {% if 'aristotle_mdr.contrib.links'|is_active_module %}
-            {% include "aristotle_mdr/links/links_display.html" %}
-        {% endif %}
-        <h2>Related content</h2>
-            {% block relationships %}{% endblock %}
-            {% for extension in config.CONTENT_EXTENSIONS %}
-                {% extra_content extension item request.user %}
-            {% endfor %}
-      </div>
-
-      {% if request.user.is_authenticated %}
-      <div class="modal fade exclude-scrap" id="TagEditorModal" tabindex="-1" role="dialog" aria-labelledby="TagEditor">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <div class="modal-title h4" id="TagEditor">Tag Editor</div>
-            </div>
-            <div class="modal-body">
-              <p>Update your tags for this item, new tags (shown darker) will be created for you</p>
-
-              <autocomplete-tags :current_tags="current_tags" :user_tags="user_tags" @tag-update="update_tags"></autocomplete-tags>
-
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <submit-tags 
-                submit-url="{% url 'aristotle_favourites:edit_tags' item.id %}"
-                :tags="current_tags"
-                modal="#TagEditorModal"
-                @tags-saved="update_saved_tags"
-                >
-              </submit-tags>
-            </div>
-
-          </div>
-        </div>
-      </div>
+  <header class="row">
+      {% if breadcrumbs %}
+        <ol class="breadcrumb">
+          {% for crumb in breadcrumbs %}
+            <li {% if crumb.active %}class="active"{% endif %}>
+              {% if crumb.url %}
+                <a href="{{ crumb.url }}">{{ crumb.name }}</a>
+              {% else %}
+                {{ crumb.name }}
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ol>
       {% endif %}
+      {% block concept_title %}
+        {% include "aristotle_mdr/concepts/titles/display_title.html" %}
+      {% endblock %}
+      {% if not hide_item_actions %}
+        {% include "aristotle_mdr/concepts/actionbar.html" %}
+      {% endif %}
+  </header>
+  
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#item" aria-controls="home" role="tab" data-toggle="tab">Item</a></li>
+    <li role="presentation"><a href="#issues" aria-controls="profile" role="tab" data-toggle="tab">Issues</a></li>
+    <li role="presentation"><a href="#history" aria-controls="messages" role="tab" data-toggle="tab">History</a></li>
+    <li role="presentation"><a href="#related" aria-controls="settings" role="tab" data-toggle="tab">Related</a></li>
+  </ul>
 
-</section>
+  <!--- Tab Panes --->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="item">
+
+      <section class="managed row">
+        {% include "aristotle_mdr/concepts/infobox.html" %}
+        <div v-pre>
+          {# Pre rendered content #}
+          {% include "aristotle_mdr/concepts/visibilityInfoBar.html" %}
+
+          <h2 title="{% doc item 'definition' %}">{% trans 'Definition'%}</h2>
+          <div id="definition" class="definition">
+              {{ item.definition | safe}}
+          </div>
+
+          {% block objSpecific %}{% endblock %}
+
+          {% if item.comments %}
+              <h2>Comments</h2>
+              {{ item.comments | safe }}
+          {% endif %}
+
+          {% if item.references %}
+          <div>
+          <h2>References</h2>
+              <p>{{ item.references | safe }}</p>
+              {% if item.submitting_organisation %}
+              <h3>Submitting Organisation</h3>
+                  <p>{{ item.submitting_organisation }}</p>
+              {% endif %}
+              {% if item.responsible_organisation %}
+              <h3>Responsible Organisation</h3>
+                  <p>{{ item.responsible_organisation }}</p>
+              {% endif %}
+          </div>
+          {% endif %}
+          {% if 'aristotle_mdr.contrib.slots'|is_active_module %}
+              {% include "aristotle_mdr/slots/slots_display.html" %}
+          {% endif %}
+          {% if 'aristotle_mdr.contrib.links'|is_active_module %}
+              {% include "aristotle_mdr/links/links_display.html" %}
+          {% endif %}
+        </div>
+
+      </section>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="issues">
+      <h1>Issues</h1>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="history">
+      <h1>History</h1>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="related">
+      <h1>Related content</h1>
+      {% block relationships %}{% endblock %}
+      {% for extension in config.CONTENT_EXTENSIONS %}
+          {% extra_content extension item request.user %}
+      {% endfor %}
+    </div>
+  </div>
+
+{% if request.user.is_authenticated %}
+<div class="modal fade exclude-scrap" id="TagEditorModal" tabindex="-1" role="dialog" aria-labelledby="TagEditor">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <div class="modal-title h4" id="TagEditor">Tag Editor</div>
+      </div>
+      <div class="modal-body">
+        <p>Update your tags for this item, new tags (shown darker) will be created for you</p>
+
+        <autocomplete-tags :current_tags="current_tags" :user_tags="user_tags" @tag-update="update_tags"></autocomplete-tags>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <submit-tags 
+          submit-url="{% url 'aristotle_favourites:edit_tags' item.id %}"
+          :tags="current_tags"
+          modal="#TagEditorModal"
+          @tags-saved="update_saved_tags"
+          >
+        </submit-tags>
+      </div>
+
+    </div>
+  </div>
 </div>
+{% endif %}
+
 <script src="{% static 'aristotle_mdr/itemPage.js' %}"></script>
+
+</div>
 {% endblock %}
