--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/managedContent.html
@@ -41,6 +41,11 @@
       {% if 'aristotle_mdr.contrib.links'|is_active_module %}
           {% include "aristotle_mdr/links/links_display.html" %}
       {% endif %}
+      <h2>Related content</h2>
+      {% block relationships %}{% endblock %}
+      {% for extension in config.CONTENT_EXTENSIONS %}
+          {% extra_content extension item request.user %}
+      {% endfor %}
     </div>
   </section>
 {% endblock %}
