--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/titles/display_title.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/titles/display_title.html
@@ -8,16 +8,18 @@
         {{ item.version }}
     </em>
     {% endif %}
-    <small>
-        (<a href="{% url 'aristotle_help:concept_help' item.meta.app_label item.meta.model_name %}"
-            title="{% trans 'Learn about this metadata type' %}"
-            data-toggle="modal" data-target="#infobox_modal"
-        >{{ item.get_verbose_name }}</a>)
-    </small>
+    {% if not hide_help %}
+      <small>
+          (<a href="{% url 'aristotle_help:concept_help' item.meta.app_label item.meta.model_name %}"
+              title="{% trans 'Learn about this metadata type' %}"
+              data-toggle="modal" data-target="#infobox_modal"
+          >{{ item.get_verbose_name }}</a>)
+      </small>
+    {% endif %}
 
     {% if not hide_item_actions %}
       {# Screen reader quick links #}
-      {% if item|can_edit:request.user and request.user.is_staff %}
+      {% if item|can_edit:request.user and request.user.is_staff and not hide_admin_edit %}
           <a class="sr-only" accesskey="p" href="{% adminEdit item %}">{% trans 'Edit in admin'%}</a>
       {% elif item|can_edit:request.user %}
           <a class="sr-only" accesskey="e" href="{% url 'aristotle:edit_item' item.id %}">{% trans 'Open item editor'%}</a>
