--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -3,6 +3,10 @@
 {% block title %}Issues for {{ item.name }}{% endblock %}
 
 {% block infoContent %}
-<h1>Issues</h1>
-<p>There are many issues</p>
+  <h1>Issues</h1>
+  {% for issue in issues %}
+    <p>{{ issue.name }}</p>
+  {% empty %}
+    <p>There are no issues</p>
+  {% endfor %}
 {% endblock %}
