--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/contentInfoBase.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/contentInfoBase.html
@@ -46,7 +46,7 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" {% if activetab == "item" %}class="active"{% endif %}>
-      <a href="{% url 'aristotle:item' item.id %}" aria-controls="item">Item</a>
+      <a href="{% url 'aristotle:item' item.id item.meta.model_name item.name %}" aria-controls="item">Item</a>
     </li>
     <li role="presentation" {% if activetab == "issues" %}class="active"{% endif %}>
       <a href="{% url 'aristotle_issues:item_issues' item.id %}" aria-controls="issues" role="tab">Issues</a>
